--- a/website2/public/stylesheets/style.css
+++ b/website2/public/stylesheets/style.css
@@ -2,11 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
 }
 
-a {
-  color: #00B7FF;
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #ededed;
+  }
+}
+
+body {
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
+body{
+  background-color: #fff2f2;
 }
