--- a/website2/views/signIn.ejs
+++ b/website2/views/signIn.ejs
@@ -20,6 +20,9 @@
   <body class="h-full">
   ```
 -->
+<html class="h-full bg-white">
+  <body class="h-full">
+<link href="/stylesheets/main.css" rel="stylesheet">
 <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
       <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
@@ -53,3 +56,5 @@
       </form>
     </div>
   </div>
+  </body>
+</html>
