--- a/website2/views/signup.ejs
+++ b/website2/views/signup.ejs
@@ -13,7 +13,6 @@
                 <label for="username" class="block text-sm font-medium leading-6 text-gray-900">Username</label>
                 <div class="mt-2">
                   <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-maroon sm:max-w-md">
-                    <span class="flex select-none items-center pl-3 text-gray-500 sm:text-sm">workcation.com/</span>
                     <input type="text" name="username" id="username" autocomplete="username" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="janesmith">
                   </div>
                 </div>
@@ -85,9 +84,9 @@
       
               <!--Gender-->
               <div class="sm:col-span-3">
-                <label for="country" class="block text-sm font-medium leading-6 text-gray-900">Gender</label>
+                <label for="gender" class="block text-sm font-medium leading-6 text-gray-900">Gender</label>
                 <div class="mt-2">
-                  <select id="country" name="country" autocomplete="country-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
+                  <select id="gender" name="gender" autocomplete="gender-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
                     <option>Male</option>
                     <option>Female</option>
                     <option>Non-Binary</option>
@@ -98,9 +97,9 @@
 
               <!--Majors-->
               <div class="sm:col-span-3">
-                <label for="country" class="block text-sm font-medium leading-6 text-gray-900">Major</label>
+                <label for="major" class="block text-sm font-medium leading-6 text-gray-900">Major</label>
                 <div class="mt-2">
-                  <select id="country" name="country" autocomplete="country-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
+                  <select id="major" name="major" autocomplete="major-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
                     <!--Nate will put in list of majors here-->
                     <option>United States</option>
                     <option>Canada</option>
@@ -111,9 +110,9 @@
 
               <!--Majors-->
               <div class="sm:col-span-3">
-                <label for="country" class="block text-sm font-medium leading-6 text-gray-900">Dorms</label>
+                <label for="dorm" class="block text-sm font-medium leading-6 text-gray-900">Dorms</label>
                 <div class="mt-2">
-                  <select id="country" name="country" autocomplete="country-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
+                  <select id="dorm" name="dorm" autocomplete="dorm-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
                     <!--Need to finish list of dorms-->
                     <option>Cochrane</option>
                     <option>West AJ</option>
@@ -124,9 +123,9 @@
 
               <!--Bedtime-->
               <div class="sm:col-span-3">
-                <label for="country" class="block text-sm font-medium leading-6 text-gray-900">Bedtime</label>
+                <label for="bedtime" class="block text-sm font-medium leading-6 text-gray-900">Bedtime</label>
                 <div class="mt-2">
-                  <select id="country" name="country" autocomplete="country-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
+                  <select id="bedtime" name="bedtime" autocomplete="bedtime-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
                     <option>Earlier than 10pm</option>
                     <option>10:00pm-12:00pm</option>
                     <option>12:01pm-2:00am</option>
@@ -137,9 +136,9 @@
 
               <!--Cleanliness-->
               <div class="sm:col-span-3">
-                <label for="country" class="block text-sm font-medium leading-6 text-gray-900">Cleanliness</label>
+                <label for="clean" class="block text-sm font-medium leading-6 text-gray-900">Cleanliness</label>
                 <div class="mt-2">
-                  <select id="country" name="country" autocomplete="country-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
+                  <select id="clean" name="clean" autocomplete="clean-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
                     <option>Super Clean, Neat, and Organized</option>
                     <option>Somewhat Clean and Neat</option>
                     <option>Tries to be clean and organized</option>
@@ -150,9 +149,9 @@
 
               <!--Atmosphere-->
               <div class="sm:col-span-3">
-                <label for="country" class="block text-sm font-medium leading-6 text-gray-900">Preferred Atmosphere</label>
+                <label for="atmosphere" class="block text-sm font-medium leading-6 text-gray-900">Preferred Atmosphere</label>
                 <div class="mt-2">
-                  <select id="country" name="country" autocomplete="country-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
+                  <select id="atmosphere" name="atmosphere" autocomplete="atmosphere-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
                     <option>Quiet</option>
                     <option>Mostly Quiet, a little background noise is okay</option>
                     <option>Some noise in the background is preferred</option>
