--- a/website2/views/signup.ejs
+++ b/website2/views/signup.ejs
@@ -2,7 +2,7 @@
   <html class="text-center sm:text-left h-full flex flex-col justify-center m-8 bg-back">
     <body class="h-full bg-back">
       <link href="/stylesheets/main.css" rel="stylesheet">
-      <form>
+      <form action="/signup" method="post">
         <div class="space-y-12">
           <div class="border-b border-gray-900/10 pb-12">
             <h1 class="text-base font-semibold leading-7 text-gray-900">Profile</h1>
