--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -2,8 +2,7 @@
 <html className="text-center sm:text-left h-full flex flex-col justify-center mx-8 bg-back">
     <body>
         <div className="flex flex-col justify-center bg-maroon">
-            <h1 className="text-lg text-white">Recommended</h1>
-
+            <h1 className="text-lg text-white font-bold">Recommended</h1>
         </div>
 
     </body>
