--- a/website2/views/signup.ejs
+++ b/website2/views/signup.ejs
@@ -62,16 +62,16 @@
       
             <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
               <div class="sm:col-span-3">
-                <label for="first-name" class="block text-sm font-medium leading-6 text-gray-900">First name</label>
+                <label for="first_name" class="block text-sm font-medium leading-6 text-gray-900">First name</label>
                 <div class="mt-2">
-                  <input type="text" name="first-name" id="first-name" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-maroon sm:text-sm sm:leading-6">
+                  <input type="text" name="first_name" id="first_name" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-maroon sm:text-sm sm:leading-6">
                 </div>
               </div>
       
               <div class="sm:col-span-3">
-                <label for="last-name" class="block text-sm font-medium leading-6 text-gray-900">Last name</label>
+                <label for="last_name" class="block text-sm font-medium leading-6 text-gray-900">Last name</label>
                 <div class="mt-2">
-                  <input type="text" name="last-name" id="last-name" autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-maroon sm:text-sm sm:leading-6">
+                  <input type="text" name="last_name" id="last_name" autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-maroon sm:text-sm sm:leading-6">
                 </div>
               </div>
       
@@ -142,7 +142,7 @@
                     <option>Super Clean, Neat, and Organized</option>
                     <option>Somewhat Clean and Neat</option>
                     <option>Tries to be clean and organized</option>
-                    <option>Could care less about cleanliness</option>
+                    <option>Could care less about how the room</option>
                   </select>
                 </div>
               </div>
@@ -164,7 +164,7 @@
       
         <div class="mt-6 flex items-center justify-center gap-x-6">
           <button type="button" class="text-sm font-semibold leading-6 text-gray-900">Cancel</button>
-          <button type="submit" class="rounded-md bg-maroon px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-maroon-dark focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-maroon">Save</button>
+            <button type="submit" class="rounded-md bg-maroon px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-maroon-dark focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-maroon">Save</button>
         </div>
       </form>
     </body>
