--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html className="text-center sm:text-left h-full flex flex-col justify-center mx-8 bg-back">
-    <body>
-        <div className="flex flex-col justify-center bg-maroon">
-            <h1 className="text-lg text-white font-bold">Recommended</h1>
-        </div>
-
+  <html class="h-full mx-8 bg-back">
+    <body class="h-full bg-back">
+      <link href="/stylesheets/main.css" rel="stylesheet">
+      <div className="bg-maroon">
+        <h1 className="text-lg text-white font-bold">Recommended</h1>
+      </div>
     </body>
-</html>
+  </html>
