--- a/website2/views/signup.ejs
+++ b/website2/views/signup.ejs
@@ -10,16 +10,25 @@
       
             <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
               <div class="sm:col-span-4">
+                <!--Username-->
                 <label for="username" class="block text-sm font-medium leading-6 text-gray-900">Username</label>
                 <div class="mt-2">
                   <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-maroon sm:max-w-md">
                     <input type="text" name="username" id="username" autocomplete="username" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="janesmith">
                   </div>
                 </div>
+                
+                <!--Password-->
+                <label for="password" class="block text-sm font-medium leading-6 text-gray-900 mt-5">Password</label>
+                <div class="mt-2">
+                  <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-maroon sm:max-w-md">
+                    <input type="text" name="password" id="password" autocomplete="password" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="SecretPassword">
+                  </div>
+                </div>
               </div>
       
               <div class="col-span-full">
-                <label for="about" class="block text-sm font-medium leading-6 text-gray-900">About</label>
+                <label for="about" class="block text-sm font-medium leading-6 text-gray-900 mt-5">About</label>
                 <p class="mt-3 text-sm leading-6 text-gray-600">Write a few sentences about yourself.</p>
                 <div class="mt-2">
                   <textarea id="about" name="about" rows="3" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-maroon sm:text-sm sm:leading-6"></textarea>
