--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-  <html class="h-full mx-8 bg-back">
-    <body class="h-full bg-back">
-      <link href="/stylesheets/main.css" rel="stylesheet">
-      <div className="bg-maroon">
-        <h1 className="text-lg text-white font-bold">Recommended</h1>
-      </div>
-    </body>
-  </html>
+    <html class="text-center sm:text-left h-full flex flex-col justify-center bg-back">
+        <link href="/stylesheets/main.css" rel="stylesheet">
+        <div class="h-24 flex flex-col justify-center bg-maroon">
+            <h1 class="flex text-white">Recommended</h1>
+        </div>
+        <body class="h-full">
+            <div>
+                <h1>Content goes here</h1>
+            </div>
+        </body>
+    </html>
