editing home page

--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -2,7 +2,7 @@
 <html class="text-center sm:text-left h-full bg-back">
     <link href="/stylesheets/main.css" rel="stylesheet">
     <body class="h-full flex flex-col bg-back">
-        {/*--Navbar--*/}
+        <!--Navbar-->
         <div class="h-24 flex flex-row justify-between items-center mb-24 bg-gradient-to-r from-maroon to-maroon-dark shadow-2xl">
             <img
                 src="https://cdn.discordapp.com/attachments/1280355262976360490/1289829540318679102/setting.png?ex=66fa3ede&is=66f8ed5e&hm=a0431fc8d07f50a621d14c1732b0d3ef68f5d1553408c150ffb660fd6fa814f7&"
@@ -18,11 +18,11 @@
             />
         </div>
 
-        {/*--Content--*/}
+        <!--Content-->
         <div class="flex flex-row justify-center">
-            {/*--Card Container--*/}
+            <!--Card Container-->
             <div class="mx-32 h-full flex flex-col justify-center bg-scroll shadow-lg">
-                {/*--Card--*/}
+                <!--Card-->
                 <div class="max-w-sm w-full lg:max-w-full lg:flex shadow-md">
                     <div className="lg:h-auto lg:w-48 flex-none bg-cover rounded-l-lg lg:rounded-l-lg border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white text-center overflow-hidden">
                       <img
@@ -60,7 +60,7 @@
                         </div>
 
                       </div>
-                      {/*like button*/}
+                      <!--like button-->
                       <div class="flex items-center justify-center">
                         <img
                           src="https://cdn.discordapp.com/attachments/1280355262976360490/1290027947482288191/Check_mark.png?ex=66faf7a6&is=66f9a626&hm=d7d8ee8476aa37a3ceb9623064375c4dab6cb5106977930bb76e49e024a7e419&"
