--- a/website2/views/search.ejs
+++ b/website2/views/search.ejs
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Page</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <!--Navbar-->
+    <div class="h-24 flex flex-row justify-between items-center mb-24 bg-gradient-to-r from-maroon to-maroon-dark shadow-2xl">
+        <img
+            src="https://cdn.discordapp.com/attachments/1280355262976360490/1289829540318679102/setting.png?ex=66fa3ede&is=66f8ed5e&hm=a0431fc8d07f50a621d14c1732b0d3ef68f5d1553408c150ffb660fd6fa814f7&"
+            class="object-contain object-left ml-8 flex h-12"
+        />
+        <img 
+            src="https://cdn.discordapp.com/attachments/1286925382632865804/1290021310797189271/Dormie_app_Gray.png?ex=66faf177&is=66f99ff7&hm=08162744a28d74d86402a2a69e227a5c38003eb9ad7a1f7f0834b4fb6b8c16aa&"
+            class="object-contain h-full"
+        />
+        <img
+            src="https://cdn.discordapp.com/attachments/1280355262976360490/1289826503818739762/communication.png?ex=66fa3c0a&is=66f8ea8a&hm=59f51764c7018fe1385d996ebb89a88666dd0810ffbe04016f40385015f1fe0e&"
+            class="object-contain object-right mr-8 h-12 flex"
+        />
+    </div>
 </head>
 <body class="bg-gray-100 flex flex-col justify-start items-center min-h-screen pt-4">
 
