--- a/website2/views/signup.ejs
+++ b/website2/views/signup.ejs
@@ -11,10 +11,10 @@
             <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
               <div class="sm:col-span-4">
                 <!--Username-->
-                <label for="username" class="block text-sm font-medium leading-6 text-gray-900">Username</label>
+                <label for="username_in_req" class="block text-sm font-medium leading-6 text-gray-900">Username</label>
                 <div class="mt-2">
                   <div class="flex rounded-md shadow-sm ring-1 ring-inset ring-gray-300 focus-within:ring-2 focus-within:ring-inset focus-within:ring-maroon sm:max-w-md">
-                    <input type="text" name="username" id="username" autocomplete="username" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="janesmith">
+                    <input type="text" name="username_in_req" id="username_in_req" autocomplete="username" class="block flex-1 border-0 bg-transparent py-1.5 pl-1 text-gray-900 placeholder:text-gray-400 focus:ring-0 sm:text-sm sm:leading-6" placeholder="janesmith">
                   </div>
                 </div>
                 
