--- a/website2/views/signup.ejs
+++ b/website2/views/signup.ejs
@@ -36,21 +36,11 @@
               </div>
       
               <div class="col-span-full">
-                <label for="photo" class="block text-sm font-medium leading-6 text-gray-900">Photo</label>
-                <div class="mt-2 flex items-center gap-x-3">
-                  <svg class="h-12 w-12 text-gray-300" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                    <path fill-rule="evenodd" d="M18.685 19.097A9.723 9.723 0 0021.75 12c0-5.385-4.365-9.75-9.75-9.75S2.25 6.615 2.25 12a9.723 9.723 0 003.065 7.097A9.716 9.716 0 0012 21.75a9.716 9.716 0 006.685-2.653zm-12.54-1.285A7.486 7.486 0 0112 15a7.486 7.486 0 015.855 2.812A8.224 8.224 0 0112 20.25a8.224 8.224 0 01-5.855-2.438zM15.75 9a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" clip-rule="evenodd" />
-                  </svg>
-                  <button type="button" class="rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50">Change</button>
-                </div>
-              </div>
-      
-              <div class="col-span-full">
-                <label for="cover-photo" class="block text-sm font-medium leading-6 text-gray-900">Cover photo</label>
+                <label for="cover-photo" class="block text-sm font-medium leading-6 text-gray-900">Profile Picture</label>
                 <div class="mt-2 flex justify-center rounded-lg border border-dashed bg-gray-100 border-gray-900/25 px-6 py-10">
                   <div class="text-center">
                     <svg class="mx-auto h-12 w-12 text-gray-300" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                      <path fill-rule="evenodd" d="M1.5 6a2.25 2.25 0 012.25-2.25h16.5A2.25 2.25 0 0122.5 6v12a2.25 2.25 0 01-2.25 2.25H3.75A2.25 2.25 0 011.5 18V6zM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0021 18v-1.94l-2.69-2.689a1.5 1.5 0 00-2.12 0l-.88.879.97.97a.75.75 0 11-1.06 1.06l-5.16-5.159a1.5 1.5 0 00-2.12 0L3 16.061zm10.125-7.81a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0z" clip-rule="evenodd" />
+                      <path fill-rule="evenodd" ad="M1.5 6a2.25 2.25 0 012.25-2.25h16.5A2.25 2.25 0 0122.5 6v12a2.25 2.25 0 01-2.25 2.25H3.75A2.25 2.25 0 011.5 18V6zM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0021 18v-1.94l-2.69-2.689a1.5 1.5 0 00-2.12 0l-.88.879.97.97a.75.75 0 11-1.06 1.06l-5.16-5.159a1.5 1.5 0 00-2.12 0L3 16.061zm10.125-7.81a1.125 1.125 0 112.25 0 1.125 1.125 0 01-2.25 0z" clip-rule="evenodd" />
                     </svg>
                     <div class="mt-4 flex text-sm leading-6 text-gray-600">
                       <label for="file-upload" class="relative cursor-pointer rounded-md font-semibold text-maroon focus-within:outline-none focus-within:ring-2 focus-within:ring-maroon focus-within:ring-offset-2 hover:text-maroon-dark">
@@ -109,10 +99,28 @@
                 <label for="major" class="block text-sm font-medium leading-6 text-gray-900">Major</label>
                 <div class="mt-2">
                   <select id="major" name="major" autocomplete="major-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
-                    <!--Nate will put in list of majors here-->
-                    <option>United States</option>
-                    <option>Canada</option>
-                    <option>Mexico</option>
+                    <option>Computer Science</option>
+                    <option>Math</option>
+                    <option>Physics</option>
+                    <option>Business</option>
+                    <option>Chemistry</option>
+                    <option>Building Construction</option>
+                    <option>CMDA</option>
+                    <option>English</option>
+                    <option>Philosophy</option>
+                    <option>Biology</option>
+                    <option>Entreprenuership</option>
+                    <option>Advertising</option>
+                    <option>Agricultural Technology</option>
+                    <option>Cognitive and Behavioral Neuroscience</option>
+                    <option>Biomedical Engineering</option>
+                    <option>Natural Resources Conservation</option>
+                    <option>Building Construction</option>
+                    <option>Natural Resources Conservation</option>
+                    <option>International Studies</option>
+                    <option>Secure Computing</option>
+                    <option>Wireless Communications and Signal Processing</option>
+                    <option>Theatre Arts</option>
                   </select>
                 </div>
               </div>
@@ -126,6 +134,19 @@
                     <option>Cochrane</option>
                     <option>West AJ</option>
                     <option>East AJ</option>
+                    <option>Pritchard</option>
+                    <option>Slusher</option>
+                    <option>GLC at Donaldson Brown</option>
+                    <option>O'Shaughnessy</option>
+                    <option>Payne</option>
+                    <option>Campbell</option>
+                    <option>Hillcrest</option>
+                    <option>Hoge</option>
+                    <option>Peddrew-Yates</option>
+                    <option>CID</option>
+                    <option>Miles</option>
+                    <option>Vawter</option>
+                    <option>Off Campus</option>
                   </select>
                 </div>
               </div>
@@ -152,6 +173,20 @@
                     <option>Somewhat Clean and Neat</option>
                     <option>Tries to be clean and organized</option>
                     <option>Could care less about how the room</option>
+                  </select>
+                </div>
+              </div>
+
+              <div class="sm:col-span-3">
+              </div>
+                <label for="class" class="block text-sm font-medium leading-6 text-gray-900">Class</label>
+                <div class="mt-2">
+                  <select id="class_year" name="class_year" autocomplete="class_year_name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 focus:ring-2 focus:ring-inset focus:ring-maroon sm:max-w-xs sm:text-sm sm:leading-6">
+                    <option>2025</option>
+                    <option>2026</option>
+                    <option>2027</option>
+                    <option>2028</option>
+                    <option>2029</option>
                   </select>
                 </div>
               </div>
