--- a/website2/views/home.ejs
+++ b/website2/views/home.ejs
@@ -51,7 +51,6 @@
                 <% users.forEach(function(user) { %>
                 <div class="max-w-sm w-full lg:max-w-full lg:flex shadow-gray-600 shadow-lg">
                     <div class="lg:h-auto lg:w-48 flex-none border-gray-400 lg:border-l lg:border-t lg:border-b lg:border-r lg:border-gray-400 bg-white text-center ">
-                        <% console.log(user.uploadedFile) %>
                       <img
                           src="<%= user.uploadedFile ? 'uploads/' + user.uploadedFile : 'images/defaultpfp.jpg' %>"
                           class="h-full object-none object-center shaowd-lg rounded-l lg:rounded-l lg:rounded-t"
@@ -81,7 +80,7 @@
                             Gender: <%= user.gender %>
                           </p>
                           <p>
-                            Class: need to add this in /signup
+                            Class: <% user.class_year %>
                           </p>
                         </div>
 
